app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m3usick-web
  labels:
    app.kubernetes.io/name: m3usick
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: m3usick
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: m3usick
        app.kubernetes.io/component: web
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: web
          image: m3usick-web
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /api/v1/healthz
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
